--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html{
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    margin-bottom: 10vh;
 }
 
 .header{
@@ -121,8 +122,8 @@ margin-left: 1rem;
     margin-right: 1rem;
 }
 .container{
-    margin-top: 20vh;
-    margin-left: 10vw;
+    margin-top: 30vh;
+    margin-right: 10vw;
     display: flex;
 }
 .form {
@@ -266,3 +267,5 @@ margin-left: 1rem;
 .photo{
     margin-left: 10vw;
 }
+
+
